--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                         <div class="avatar-scan"></div>
                     </div>
                 </div>
-                <div class="floating-badge badge-1">React</div>
-                <div class="floating-badge badge-2">Python</div>
+                <div class="floating-badge badge-1">Kali</div>
+                <div class="floating-badge badge-2">C++</div>
                 <div class="floating-badge badge-3">Security+</div>
             </div>
         </div>
