--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="#about" class="nav-link">À propos</a></li>
                 <li><a href="#skills" class="nav-link">Compétences</a></li>
                 <li><a href="#projects" class="nav-link">Projets</a></li>
+                <li><a href="#projects" class="nav-link">Mes Certifications</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
 
@@ -63,6 +64,7 @@
             <a href="#about" class="mobile-link">À propos</a>
             <a href="#skills" class="mobile-link">Compétences</a>
             <a href="#projects" class="mobile-link">Projets</a>
+            <a href="#Mes Certifications" class="mobile-link">Mes Certifications</a>
             <a href="#contact" class="mobile-link">Contact</a>
             <a href="./CV Professionnel Minimaliste Beige.pdf" class="mobile-cta">Télécharger CV</a>
         </div>
