--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <li><a href="#about" class="nav-link">À propos</a></li>
                 <li><a href="#skills" class="nav-link">Compétences</a></li>
                 <li><a href="#projects" class="nav-link">Projets</a></li>
-                <li><a href="#projects" class="nav-link">Mes Certifications</a></li>
+                <li><a href="#Mes Certifications" class="nav-link">Mes Certifications</a></li>
+                <li><a href="#Mon blog" class="nav-link">Mon blog</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
 
@@ -65,6 +66,7 @@
             <a href="#skills" class="mobile-link">Compétences</a>
             <a href="#projects" class="mobile-link">Projets</a>
             <a href="#Mes Certifications" class="mobile-link">Mes Certifications</a>
+            <a href="#Mon blog" class="mobile-link">Mon blog</a>
             <a href="#contact" class="mobile-link">Contact</a>
             <a href="./CV Professionnel Minimaliste Beige.pdf" class="mobile-cta">Télécharger CV</a>
         </div>
@@ -111,6 +113,12 @@
                                         <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
                                     </svg>
                                     Voir mes projets
+                                </a>
+                                <a href="#Mes Certifications" class="btn btn-primary">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+                                    </svg>
+                                    Voir mes certificats
                                 </a>
                                 <a href="#contact" class="btn btn-outline">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -355,12 +363,12 @@
                             <polyline points="8 6 2 12 8 18"></polyline>
                         </svg>
                     </div>
-                    <h3 class="skill-name">HTML/CSS</h3>
+                    <h3 class="skill-name">gns3</h3>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">90%</span>
-                    <span class="skill-category">Frontend</span>
+                    <span class="skill-level">80%</span>
+                    <span class="skill-category">===</span>
                 </div>
 
                 <div class="skill-card" data-category="frontend" data-level="85">
@@ -373,12 +381,12 @@
                             <polyline points="10 9 9 9 8 9"></polyline>
                         </svg>
                     </div>
-                    <h3 class="skill-name">JavaScript</h3>
+                    <h3 class="skill-name">Script bash</h3>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">85%</span>
-                    <span class="skill-category">Frontend</span>
+                    <span class="skill-level">55%</span>
+                    <span class="skill-category">Automatisation</span>
                 </div>
 
                 <div class="skill-card" data-category="frontend" data-level="80">
@@ -389,11 +397,11 @@
                             <polyline points="2 12 12 17 22 12"></polyline>
                         </svg>
                     </div>
-                    <h3 class="skill-name">React</h3>
+                    <h3 class="skill-name">C++</h3>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">80%</span>
+                    <span class="skill-level">35%</span>
                     <span class="skill-category">Frontend</span>
                 </div>
 
@@ -407,9 +415,7 @@
                         </svg>
                     </div>
                     <h3 class="skill-name">Node.js</h3>
-                    <div class="skill-bar">
-                        <div class="skill-progress" style="width: 0%"></div>
-                    </div>
+                   
                     <span class="skill-level">75%</span>
                     <span class="skill-category">Backend</span>
                 </div>
@@ -425,7 +431,7 @@
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">85%</span>
+                    <span class="skill-level">35%</span>
                     <span class="skill-category">Backend</span>
                 </div>
 
@@ -441,7 +447,7 @@
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">70%</span>
+                    <span class="skill-level">50%</span>
                     <span class="skill-category">Database</span>
                 </div>
 
@@ -510,7 +516,7 @@
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 0%"></div>
                     </div>
-                    <span class="skill-level">65%</span>
+                    <span class="skill-level">45%</span>
                     <span class="skill-category">Security</span>
                 </div>
 
@@ -522,10 +528,7 @@
                             <line x1="12" y1="16" x2="12.01" y2="16"></line>
                         </svg>
                     </div>
-                    <h3 class="skill-name">Pentesting</h3>
-                    <div class="skill-bar">
-                        <div class="skill-progress" style="width: 0%"></div>
-                    </div>
+                   
                     <span class="skill-level">60%</span>
                     <span class="skill-category">Security</span>
                 </div>
