--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                             <div class="terminal-dot red"></div>
                             <div class="terminal-dot yellow"></div>
                             <div class="terminal-dot green"></div>
-                            <span class="terminal-title">contact@alex-dev:~</span>
+                            <span class="terminal-title">Jonathan@sec:~</span>
                         </div>
                         <div class="terminal-body">
                             <div class="terminal-welcome">
@@ -896,7 +896,7 @@
                             </div>
                             <div class="contact-details">
                                 <span class="contact-label">Téléphone</span>
-                                <span class="contact-value">+33 6 12 34 56 78</span>
+                                <span class="contact-value">+237 659 030 156</span>
                             </div>
                         </div>
 
@@ -909,7 +909,7 @@
                             </div>
                             <div class="contact-details">
                                 <span class="contact-label">Email</span>
-                                <span class="contact-value">alex.dev@email.com</span>
+                                <span class="contact-value">mengoulajonathan82@gmail.com</span>
                             </div>
                         </div>
 
@@ -922,7 +922,7 @@
                             </div>
                             <div class="contact-details">
                                 <span class="contact-label">Localisation</span>
-                                <span class="contact-value">Paris, France</span>
+                                <span class="contact-value">Yaoundé, Cameroun</span>
                             </div>
                         </div>
                     </div>
