--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                             </svg>
                         </a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/jonathan-mengoula-4046a4335?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BAZ889QOFTN6x2qN%2Bidu%2Fng%3D%3D" class="social-link" aria-label="LinkedIn">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
@@ -954,12 +954,12 @@
                             <span class="availability-dot"></span>
                             <span class="availability-text">Disponible pour des opportunités</span>
                         </div>
-                        <p class="availability-desc">Je suis actuellement à la recherche d'un stage en cybersécurité pour septembre 2024. N'hésitez pas à me contacter !</p>
+                        <p class="availability-desc">Je suis actuellement à la recherche d'un stage en cybersécurité pour Aout 2026. N'hésitez pas à me contacter !</p>
                     </div>
 
                     <div class="response-time">
                         <span class="response-dot"></span>
-                        <span class="response-text">Temps de réponse moyen: 24h</span>
+                        <span class="response-text">Temps de réponse moyen: 10h</span>
                     </div>
                 </div>
             </div>
@@ -977,9 +977,9 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/>
                         </svg>
-                        <span class="footer-logo-text" id="footer-logo">Alex.Dev</span>
+                        <span class="footer-logo-text" id="footer-logo">LionKinG1972</span>
                     </a>
-                    <p class="footer-desc">Étudiant en cybersécurité passionné par la protection des systèmes et le développement d'applications sécurisées.</p>
+                    <p class="footer-desc">Étudiant en cybersécurité passionné par la protection des systèmes et l'implémentation d'applications sécurisées.</p>
                 </div>
 
                 <div class="footer-links">
@@ -1008,13 +1008,13 @@
                                 <polyline points="4 17 10 11 4 5"></polyline>
                                 <line x1="12" y1="19" x2="20" y2="19"></line>
                             </svg>
-                            <span>JavaScript</span>
+                            <span>Script_bash</span>
                         </div>
                         <div class="tech-item">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
                             </svg>
-                            <span>Tailwind</span>
+                            <span>Packettracer</span>
                         </div>
                     </div>
                 </div>
@@ -1023,7 +1023,7 @@
             <div class="footer-divider"></div>
 
             <div class="footer-bottom">
-                <p class="copyright">© <span id="current-year">2024</span> Alex.Dev. Tous droits réservés.</p>
+                <p class="copyright">© <span id="current-year">2024</span> Jonathan. Tous droits réservés.</p>
                 <p class="made-with">
                     Designed with 
                     <svg class="heart-icon" viewBox="0 0 24 24" fill="currentColor" stroke="none">
